# Beyond-Paste

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
client/: index.html  requirements.md
client/src/: App.tsx  index.css
client/src/components/: brand-logo.tsx  command-palette.tsx  entry-card.tsx  entry-dialog.tsx  folder-dialog.tsx  settings-dialog.tsx
client/src/hooks/: use-entries.ts  use-folders.ts  use-running-apps.ts  use-settings.ts
client/src/lib/: desktop.ts
client/src/pages/: dashboard.tsx  picker.tsx
docs/prd/: beyond-paste-windows-mvp.md
server/: routes.ts  storage.ts
shared/: routes.ts  schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
